# autobots

./: README.md
auto_car_slam/devel/share/car_slam/cmake/: car_slamConfig.cmake
auto_car_slam/src/car_slam/: CMakeLists.txt
auto_car_slam/src/car_slam/launch/: hector_mapping.launch  slam.launch
auto_car_slam/src/car_slam/src/: keyboard_control.cpp
mbed/: driver.cpp  driver.h  encoder.cpp  encoder.h  main.cpp  shared.h
mbed/.hg/: dirstate
mbed/mbed_PID_w:IR/: full.lib
mbed/mbed_PID_w:IR/.hg/: dirstate
mbed/mbed_PID_w:IR/PID/.hg/: dirstate
mbed/mbed_PID_w:IR/full/: ITG3200.lib  driver.cpp  driver.h  encoder.cpp  encoder.h  imu.cpp  imu.h  ir.cpp  ir.h  main.cpp  prints.cpp  shared.h
mbed/mbed_PID_w:IR/full/.hg/: dirstate
mbed/mbed_PID_w:IR/full/ADXL345/.hg/: dirstate
mbed/mbed_PID_w:IR/full/HMC5843/.hg/: dirstate
mbed/mbed_PID_w:IR/full/ITG3200/.hg/: dirstate  hgrc  undo.desc
mbed/mbed_PID_w:IR/full/ITG3200/.hg/cache/: branchheads  tags
mbed/mbed_PID_w:IR/full/ITG3200/.hg/store/: 00changelog.i  00manifest.i
mbed/mbed_PID_w:IR/full/ITG3200/.hg/store/data/: _i_t_g3200.cpp.i  _i_t_g3200.h.i
mbed/mbed_PID_w:IR/full/mbed-rtos/.hg/: dirstate
resources/: nav_1_w:PID.mov
slaveSide/car_slam/launch/: hector_mapping.launch  slam_demo.launch  test_odom.launch
slaveSide/car_slam/src/: encoder_odom_tf.cpp  keyboard_control.cpp  nav_control.cpp
slaveSide/control_to_mbed/: CMakeLists.txt  package.xml
slaveSide/control_to_mbed/src/: control2Serial.cpp  control2Serial.h
slaveSide/encoder_from_mbed/: CMakeLists.txt  package.xml
slaveSide/encoder_from_mbed/src/: encoderPublisher.cpp  encoderPublisher.h  getEncoder.cpp  getcontrol.cpp
slaveSide/imu_generic1/src/: Imu_Parser.cpp  SensorMsg_Imu.cpp
slaveSide/ircmd_to_motor/: CMakeLists.txt  package.xml
slaveSide/ircmd_to_motor/src/: IRcmd2Serial.cpp  IRcmd2Serial.h  get_ir_commands.cpp
slaveSide/scripts/: init.sh  power.sh  serialPermission.sh  wirelesscheck.sh
slaveSide/serial_generic1/src/: Serial_main.cpp
vmSide/car_slam/: CMakeLists.txt
vmSide/car_slam/launch/: #hector_mapping.launch#  #slam.launch#  demo.launch  geotiff_mapper.launch  geotiff_mapper_demo.launch  hector_mapping.launch  hector_mapping_demo.launch  slam.launch  slam_demo.launch  slam_replay.launch  test_motor.launch
vmSide/car_slam/src/: encoder_odom_tf.cpp  nav_control.cpp
vmSide/ros_navigation2d/launch/: hector_hokuyo.launch  move_base.launch
vmSide/ros_navigation2d/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_costmap_params_static.yaml  local_costmap_params.yaml
